# TrianGle

./: README.md  Story.md  main.py  pyproject.toml  setting.md  stroy.md  trainGle.tiled-session  未命名.tmx
config/: config.yaml
plugins/connect_database/: __init__.py  database_table.py
plugins/get_config/: __init__.py
sprite/: __init__.py
views/: menu_view.py  world_view.py
