[tool.poetry]
name = "triangle"
version = "0.1.0"
description = ""
authors = ["yOung-4 <91882244+yOung-4@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"
python-i18n = "^0.3.9"
pyyaml = "^6.0.1"
pony = "^0.7.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
